# scrimbot-api

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle
.github/workflows/: docker-publish.yml  gradle-publish.yml
.sqlx/: query-04a9a2d07587216ae8f960c79a42e923a9a048de031004fdfbe46a1e44d51ff0.json  query-78452597bdf67fa9b2179ac4f682c9511cce1f843f2c58e730b5dc278e60b572.json
migrations/: 20231005194547_init.sql
resources/: application.conf
src/: Application.kt  DatabaseFactory.kt  auth.rs  dathost.rs  db.rs  discord.rs  errors.rs  main.rs  models.rs  steam.rs  utils.rs
src/main/kotlin/com/martige/: Application.kt  DatabaseFactory.kt
src/main/kotlin/com/martige/model/: CsgoSettings.kt  DatHostMatch.kt  DathostServerInfo.kt  MatchData.kt  PlayerStat.kt  Response.kt  SteamUser.kt  SteamWebAPIResponse.kt  Team1Stats.kt  Team2Stats.kt
src/main/kotlin/com/martige/service/: DemoStatsService.kt  GameServerService.kt  MatchEndService.kt  StatisticsService.kt  SteamWebService.kt  (+1 more)
src/main/resources/: logback.xml
src/model/: CsgoSettings.kt  DatHostMatch.kt  DathostServerInfo.kt  Match.kt  MatchData.kt  PlayerStat.kt  PlaywinResult.kt  Ports.kt  Response.kt  SteamUser.kt  SteamWebAPIResponse.kt  Team1Stats.kt  Team2Stats.kt
src/model/demostatsservice/: DemoStatsResponse.kt  Player.kt
src/routes/: ingest.rs  mod.rs  webhooks.rs
src/service/: DemoStatsService.kt  GameServerService.kt  MatchEndService.kt  StatisticsService.kt  SteamWebService.kt  UploadService.kt
test/: ApplicationTest.kt
(+2 files in other folders)
